fix: spacing main box

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .ms-box {
-    margin: 50px;
+    margin: 40px 130px;
     position: absolute;
     top: 0;
     left: 0;
